--- a/gs.css
+++ b/gs.css
@@ -31,6 +31,8 @@ p {
     color:azure;
     text-align: center;
     margin: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 tr:nth-child(even) {
